# docs

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  DOMAIN.md  README.md
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.github/: INSTRUCTIONS.md  pull_request_template.md
.github/workflows/: ci.yml
backend/: README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 6dbbf5fdf8d2_add_user_and_user_profile.py  7375fccbf3b8_add_user_tokens_table.py
backend/app/: auth.py  config.py  database.py  main.py
backend/app/api/: dependencies.py  users.py
backend/app/middleware/: auth.py
backend/app/models/: user.py
backend/app/schemas/: user.py
backend/app/services/: auth_service.py  user_service.py
backend/tests/: conftest.py  test_user_service.py
backend/tests/api/: test_health.py  test_users.py
backend/tests/services/: test_auth_service.py  test_user_service.py
